syntax = "proto2";
package main;

message GetTokenReq {
    required string device_id = 1; //设备id
    required string channel = 2;   // 渠道号
    required uint64 ts = 3;        // 请求时间戳 ms
    required string app_secret = 4; 
}

message GetTokenRsp {
    required int32 code = 1; // 0 on succ otherwise fail, -999 means auth failed
    required string msg = 2;
    optional string token = 3;
    optional uint64 expired_time = 4;
}